--- a/templates/layout.html
+++ b/templates/layout.html
@@ -62,7 +62,7 @@
         </main>
 
         <footer class="mb-5 small text-center text-muted">
-            Data provided by <a href="https://iexcloud.io/">IEX</a>
+            Data provided by <a href="https://www.alphavantage.co/">Alpha Vantage</a></br>Only 5 api calls per minute allowed in preview version
         </footer>
 
     </body>
